alcune correzioni lezione 9

--- a/9. Gestione e visualizzazione dati: pandas e seaborn.ipynb
+++ b/9. Gestione e visualizzazione dati: pandas e seaborn.ipynb
@@ -25,12 +25,12 @@
    "source": [
     "Scopo di questo notebook è la gestione del dataset *Titanic* di Kaggle: https://www.kaggle.com/c/titanic.\n",
     "\n",
-    "Utilizzeremo *Pandas* per affrontare tutte le operazioni che da un file .csv mi consentono di ottenere un formato dati utilizzabile da Scikit-learn."
+    "Utilizzeremo *pandas* per affrontare tutte le operazioni che da un file .csv mi consentono di ottenere un formato dati utilizzabile da Scikit-learn."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,19 +41,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Carichiamo gli insiemi di addestramento e test e creiamo due *DataFrame*, struttura base di Pandas. Usiamo l'argomento *index_col* per utilizzare la colonna *Passenger_Id* come indice.\n",
+    "Carichiamo gli insiemi di addestramento e test e creiamo due *DataFrame*, struttura base di pandas. Usiamo l'argomento *index_col* per utilizzare la colonna *Passenger_Id* come indice.\n",
     "\n",
     "I metodi *head* e *info* restituiscono rispettivamente le prime 5 righe del dataset e informazioni generali sul tipo dei dati e sui dati mancanti."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train = pd.read_csv('../data/train.csv', header = 0, index_col = 'PassengerId')\n",
-    "df_test = pd.read_csv('../data/test.csv', header = 0, index_col = 'PassengerId')"
+    "df_train = pd.read_csv('../data/train.csv', header=0, index_col='PassengerId')\n",
+    "df_test = pd.read_csv('../data/test.csv', header=0, index_col='PassengerId')"
    ]
   },
   {
@@ -437,7 +437,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pandas usa *loc* e *iloc* rispettivamente per l'accesso per etichetta e indice numerico."
+    "pandas usa *loc* e *iloc* rispettivamente per l'accesso per etichetta e indice numerico."
    ]
   },
   {
@@ -789,7 +789,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I nomi delle colonne (ciascuna sarà un array di valori, che Pandas chiama *Series*) possono essere usati per indicizzarle, sia dict-style,\n",
+    "I nomi delle colonne (ciascuna sarà un array di valori, che pandas chiama *Series*) possono essere usati per indicizzarle, sia dict-style,\n",
     "            \n",
     "            df['NomeColonna']\n",
     "            \n",
@@ -885,7 +885,7 @@
     "===\n",
     "La libreria seaborn (abbiamo visto un esempio nella lezione 8) è costruita su Matplotlib (grafica) e Scipy (statistica) ed è la libreria di Python per la visualizzazione statistica.\n",
     "\n",
-    "E' molto comoda da usare in coppia con Pandas, e supporta l'interazione coi DataFrame. Ecco alcuni esempi di utilizzo."
+    "E' molto comoda da usare in coppia con pandas, e supporta l'interazione coi DataFrame. Ecco alcuni esempi di utilizzo."
    ]
   },
   {
@@ -916,7 +916,6 @@
    ],
    "source": [
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
     "\n",
     "sns.distplot(df.loc['train']['Fare'])"
    ]
@@ -1195,7 +1194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Anche Pandas offre qualche strumento utile per analizzare i dati. Il metodo *describe* mostra qualche statistica di una Series."
+    "Anche pandas offre qualche strumento utile per analizzare i dati. Il metodo *describe* mostra qualche statistica di una Series."
    ]
   },
   {
@@ -1376,7 +1375,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pandas può essere usato per costruire nuove colonne (feature) a partire da quelle esistenti. Ecco un paio di esempi."
+    "pandas può essere usato per costruire nuove colonne (feature) a partire da quelle esistenti. Ecco un paio di esempi."
    ]
   },
   {
@@ -1385,8 +1384,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Title'] = df['Name'].apply(lambda c: c[c.index(',') + 2 : c.index('.')])\n",
-    "df['LastName'] = df['Name'].apply(lambda n: n[0:n.index(',')])\n",
+    "df['Title'] = df['Name'].apply(lambda name: name[name.index(',') + 2 : name.index('.')])\n",
+    "df['LastName'] = df['Name'].apply(lambda name: name[0:name.index(',')])\n",
     "df['FamilySize'] = df['SibSp'] + df['Parch'] + 1"
    ]
   },
@@ -2799,7 +2798,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.merge(median_age_by_title, left_on='Title')"
+    "df = df.merge(median_age_by_title, left_on='Title', right_index=True)"
    ]
   },
   {
@@ -3251,7 +3250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "E controlliamo l'effetto su Mr. James e il Dr. Jackson."
+    "E controlliamo l'effetto su Mr. Moran e il Dr. Brewe."
    ]
   },
   {
@@ -3432,12 +3431,12 @@
     "\n",
     "La libreria *sklearn_pandas* (si installa con pip) è uno strumento molto utile per passare da un DataFrame a qualcosa di utilizzabile con sklearn.\n",
     "\n",
-    "Usiamo lo strumento *DataFrameMapper* per utilizzare le funzioni di preprocessing di sklearn direttamente su un DataFrame Pandas."
+    "Usiamo lo strumento *DataFrameMapper* per utilizzare le funzioni di preprocessing di sklearn direttamente su un DataFrame pandas."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3453,7 +3452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3477,7 +3476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3571,7 +3570,7 @@
        "7       4.0  fish    27.0"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3582,7 +3581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -3641,7 +3640,7 @@
        "2       1.6  fish   100.0"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3661,7 +3660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3681,7 +3680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
