--- a/2. Liste, cicli e comprensioni.ipynb
+++ b/2. Liste, cicli e comprensioni.ipynb
@@ -59,7 +59,7 @@
    "source": [
     "Dimensione e accesso indicizzato\n",
     "---\n",
-    "La *dimensione* di una lista si ottiene con la *funzione* (o *metodo*) *len* (da *length*, lunghezza in inglese). Vedremo in dettaglio cosa è una funzione nella Lezione 5."
+    "La *dimensione* di una lista si ottiene attraverso la funzione *len* (da *length*, lunghezza in inglese)."
    ]
   },
   {
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-81ce8cf24cf5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshapes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'rectangle'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-18-81ce8cf24cf5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshapes\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'rectangle'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m: 'rectangle' is not in list"
      ]
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -631,22 +631,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "voto minimo: 22.00\n",
-      "voto massimo: 30.00\n"
+      "voto minimo: 22\n",
+      "voto massimo: 30\n"
      ]
     }
    ],
    "source": [
     "grades = [28, 25, 22, 30, 30, 28, 26]\n",
-    "print('voto minimo: %.2f' % min(grades))\n",
-    "print('voto massimo: %.2f' % max(grades))"
+    "print(f'voto minimo: {min(grades)}')\n",
+    "print(f'voto massimo: {max(grades)}')"
    ]
   },
   {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -779,7 +779,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-31-63b76547365d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstuff\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-43-63b76547365d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstuff\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: '<' not supported between instances of 'int' and 'str'"
      ]
     }
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +843,7 @@
        "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(numbers[:])#tutti gli elementi\n",
+    "print(numbers[::])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -909,12 +928,12 @@
    ],
    "source": [
     "even_numbers = numbers[::2]\n",
-    "print(odd_numbers)"
+    "print(even_numbers)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -981,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1020,12 +1039,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Come prima, la lista originale rimane inalterata."
+    "La copia (similmente a sorted) restituisce una *nuova* lista: quella originale rimane inalterata."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1044,12 +1063,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Una lista non può essere copiata semplicemente assegnandola ad un altro nome di variabile. Così facendo, entrambe le variabili si riferiranno alla stessa lista."
+    "Una lista non può essere copiata semplicemente assegnandola ad un altro nome di variabile. Così facendo, entrambe le variabili faranno riferimento alla stessa lista."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1100,7 @@
     "- creare una lista vuota e riempirla\n",
     "- inserire, modificare e cancellare elementi\n",
     "- ordinarla in modo naturale e inverso\n",
-    "- copiarla ed estrarne delle porzioni"
+    "- copiarla ed estrarne delle porzioni."
    ]
   },
   {
@@ -1106,7 +1125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1200,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -1305,7 +1324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -1341,7 +1360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -1372,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -1409,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -1431,12 +1450,12 @@
    "source": [
     "Comprensioni di liste\n",
     "---\n",
-    "Come abbiamo visto nell'esercizio precedente, la costruzione di una lista a partire da una di partenza attraverso un ciclo è un po' macchinosa."
+    "Come abbiamo visto nell'esercizio precedente, utilizzare un ciclo per costruire una lista a partire da una di partenza è un po' macchinoso."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -1484,7 +1503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -1509,7 +1528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1549,7 +1568,7 @@
    "source": [
     "*Esercizio 4*\n",
     "---\n",
-    "Ripetere l'esercizio 3 (ignorando la stampa ma dividendo per due i nuovi elementi ottenuti elevando al quadrato), utilizzando una comprensione di lista."
+    "Dividere per due i quadrati ottenuti all'esercizio 3, utilizzando una comprensione di lista."
    ]
   },
   {
@@ -1596,7 +1615,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
