--- a/3. Dizionari.ipynb
+++ b/3. Dizionari.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -107,19 +107,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Il codice qui sopra mostra come si dichiara un dizionario. \n",
+    "Il codice qui sopra è un esempio generale di come si dichiara un dizionario. \n",
     "\n",
     "- le coppie (chiave, valore) possono essere tante a piacere\n",
     "- i valori possono essere qualsiasi cosa (inclusi liste e altri dizionari)\n",
     "- una chiave non può essere ripetuta: per esempio, ciascun utente avrà un solo nome, una sola età, ...\n",
-    "- un dizionario si dichiara con le parentesi graffe\n",
+    "- un dizionario si dichiara con le parentesi graffe.\n",
     "\n",
     "Tornando al nostro esempio, possiamo gestire il database di utenti come una lista di dizionari."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,8 +198,8 @@
     }
    ],
    "source": [
-    "users_name = [user['name'] for user in users]\n",
-    "print(users_name)"
+    "user_names = [user['name'] for user in users]\n",
+    "print(user_names)"
    ]
   },
   {
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +391,7 @@
     }
    ],
    "source": [
-    "for name, cell_number in tel_book.items():\n",
+    "for name, cell_number in tel_book.items():#chiave/valore\n",
     "    print('Il numero di {} è {}'.format(name.title(), cell_number))"
    ]
   },
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -446,12 +446,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Se si ordina un dizionario, l'ordinamento sarà fatto sulle chiavi. Questo si può sfruttare per stampare un dizionario in ordine (di chiave)."
+    "I dizionari sono per costruzione *unordered*. Si può però accedere in modo ordinato a chiavi e valori: https://stackoverflow.com/questions/613183/how-do-i-sort-a-dictionary-by-value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
