--- a/Soluzioni.ipynb
+++ b/Soluzioni.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -155,13 +155,13 @@
     "\n",
     "for element in lst:\n",
     "    if element**2 % 2 == 0 and element**2 % 3 == 0:\n",
-    "        print('Il quadrato di %d è %d, che è multiplo sia di 2 che di 3' % (element, element**2))\n",
+    "        print(f'Il quadrato di {element} è {element**2}, che è multiplo sia di 2 che di 3')\n",
     "    elif element**2 % 2 == 0:\n",
-    "        print('Il quadrato di %d è %d, che è multiplo di 2 ma non di 3' % (element, element**2))\n",
+    "        print(f'Il quadrato di {element} è {element**2}, che è multiplo di 2 ma non di 3')\n",
     "    elif element**2 % 3 == 0:\n",
-    "        print('Il quadrato di %d è %d, che è multiplo di 3 ma non di 2' % (element, element**2))\n",
+    "        print(f'Il quadrato di {element} è {element**2}, che è multiplo di 3 ma non di 2')\n",
     "    else:\n",
-    "        print('Il quadrato di %d è %d, che non è multiplo né di 2 né di 3' %  (element, element**2))\n",
+    "        print(f'Il quadrato di {element} è {element**2}, che non è multiplo né di 2 né di 3')\n",
     "        \n",
     "print('\\n*******************\\n')\n",
     "\n",
