rivista lezione 5 fino a esercizio 5.

--- a/1. Variabili, stringhe e numeri.ipynb
+++ b/1. Variabili, stringhe e numeri.ipynb
@@ -258,7 +258,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alle stringhe (come a tutti i tipi di variabili) possono essere applicate delle azioni, che si chiamano *metodi* o *funzioni*. Vedremo le funzioni più in dettaglio in seguito, nella Lezione 5."
+    "Alle stringhe (come a tutti i tipi di variabili) possono essere applicate delle azioni, che si chiamano *funzioni*. Vedremo le funzioni più in dettaglio in seguito, nella Lezione 5."
    ]
   },
   {
@@ -526,22 +526,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.3"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "round(c, 1)#arrotondamento alla prima cifra decimale; round è un metodo built-in, come print"
+    "round(c, 1)#arrotondamento alla prima cifra decimale; round è una funzione built-in, come print"
    ]
   },
   {
@@ -578,7 +567,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "L'errore è dovuto al tentativo di somma, dentro le parentesi di print, di una stringa con un intero. Si può trasformare l'intero in stringa prima di stamparlo, o lasciarlo fare al metodo print."
+    "L'errore è dovuto al tentativo di somma, dentro le parentesi di print, di una stringa con un intero. Si può trasformare l'intero in stringa prima di stamparlo, o lasciarlo fare alla funzione print."
    ]
   },
   {
