--- a/2. Liste, cicli e comprensioni.ipynb
+++ b/2. Liste, cicli e comprensioni.ipynb
@@ -279,7 +279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Per cancellare un elemento della lista si usa il metodo *remove*."
+    "Per cancellare un elemento della lista si usa la funzione *remove*."
    ]
   },
   {
@@ -306,7 +306,7 @@
    "source": [
     "Estrazione e svuotamento\n",
     "---\n",
-    "Il metodo *pop* estrae l'ultimo elemento."
+    "La funzione *pop* estrae l'ultimo elemento."
    ]
   },
   {
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La lista si può svuotare con il metodo *clear*."
+    "La lista si può svuotare con la funzione *clear*."
    ]
   },
   {
@@ -442,7 +442,7 @@
    "source": [
     "Ordinamento\n",
     "---\n",
-    "Una lista può essere ordinata attraverso il metodo *sort* (del tipo lista) o *sorted* (built-in). Anche in questo caso, è Python che interpreta l'operazione in modo dinamico in base al tipo di variabili contenute nella lista. Nel caso delle stringhe, l'ordinamento sarà alfabetico."
+    "Una lista può essere ordinata attraverso la funzione *sort* (del tipo lista) o *sorted* (built-in). Anche in questo caso, è Python che interpreta l'operazione in modo dinamico in base al tipo di variabili contenute nella lista. Nel caso delle stringhe, l'ordinamento sarà alfabetico."
    ]
   },
   {
@@ -655,7 +655,7 @@
    "source": [
     "### *Esercizio 1* \n",
     "\n",
-    "Stampare il voto medio col formato qui sopra, usando (anche) il metodo *sum*."
+    "Stampare il voto medio col formato qui sopra, usando (anche) la funzione *sum*."
    ]
   },
   {
@@ -1214,7 +1214,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ovviamente, se le iterazioni sono tante, dichiarare una lista di numeri diventa scomodo. Il metodo built-in *range* fa al caso nostro."
+    "Ovviamente, se le iterazioni sono tante, dichiarare una lista di numeri diventa scomodo. La funzione built-in *range* fa al caso nostro."
    ]
   },
   {
