--- a/5. Funzioni.ipynb
+++ b/5. Funzioni.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "Sintassi\n",
     "---\n",
-    "Una *funzione* (o *metodo*) è una sequenza di azioni a cui si dà un nome, e che si può *chiamare* all'occorrenza. Abbiamo già visto ed usato alcune funzioni: tra le altre, print, len, title, round e sorted."
+    "Una *funzione* è una sequenza di azioni a cui si dà un nome, e che si può *chiamare* all'occorrenza. Abbiamo già visto ed usato alcune funzioni: tra le altre, print, len, title, round e sorted."
    ]
   },
   {
@@ -93,7 +93,7 @@
    "outputs": [],
    "source": [
     "def function_name(argument_1, argument_2):\n",
-    "    #fai qualcosa utilizzando argument_1 e argument_2\n",
+    "    #fai qualcosa, utilizzando argument_1 e argument_2\n",
     "    #volendo, restituisci un valore\n",
     "    \n",
     "function_name(a, b)#chiamata"
@@ -110,14 +110,14 @@
     "- il nome della funzione e la lista ordinata dei suoi argomenti è detta *firma*\n",
     "- gli argomenti  seguono un ordine, che deve essere rispettato al momento della chiamata\n",
     "- **def** è una keyword del linguaggio, come for e if\n",
-    "- la definizione deve precedere la chiamata nell'ordine di scrittura del codice\n",
+    "- la definizione deve precedere la chiamata nell'ordine di scrittura del codice.\n",
     "\n",
     "Torniamo al nostro database, e condensiamo in una funzione la stampa delle informazioni di un utente."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
     "Il costrutto\n",
     "\n",
     "            *lista          \n",
-    "permette di passare una lista ad un metodo, sotto forma di argomenti 'spacchettati'. L'ordine degli elementi della lista deve rispettare quello degli argomenti nella firma del metodo."
+    "permette di passare una lista ad una funzione, sotto forma di argomenti 'spacchettati'. L'ordine degli elementi della lista deve rispettare quello degli argomenti nella firma della funzione."
    ]
   },
   {
@@ -189,7 +189,7 @@
     }
    ],
    "source": [
-    "def show_user_info(name, age, gender):\n",
+    "def show_user_info(name, age, gender):#implementazione differente\n",
     "    print('\\nNome:', name)\n",
     "    print('Età:', age)\n",
     "    print('Sesso:', gender)\n",
@@ -223,21 +223,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Attenzione**: nei due esempi precedenti, la funzione chiamata deve conoscere l'ordine dei campi della lista o del dizionario passati come argomento. Nel primo esempio, invece, devono essere noti al chiamato i nomi dei campi utente che si vogliono visualizzare."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Argomenti opzionali\n",
     "---\n",
-    "Una funzione può avere degli *argomenti opzionali* (tanti a piacere). Questi devono seguire, nella *firma* del metodo, quelli obbligatori. Sono inizializzati con un valore di default (attraverso un *=*) e non conta l'ordine in cui vengono passati alla funzione."
+    "Una funzione può avere degli *argomenti opzionali* (tanti a piacere). Questi devono seguire, nella *firma* della funzione, quelli obbligatori. Sono inizializzati con un valore di default (attraverso un *=*) e non conta l'ordine in cui vengono passati."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -248,6 +241,11 @@
       "Nome: Francesco\n",
       "Età: 30\n",
       "Sesso: M\n",
+      "Email: not available\n",
+      "\n",
+      "Nome: Elisa\n",
+      "Età: 27\n",
+      "Sesso: F\n",
       "Email: not available\n",
       "\n",
       "Nome: Giovanni\n",
@@ -267,6 +265,9 @@
     "francesco = {'name':'Francesco', 'age':30, 'gender':'M'}\n",
     "show_user_info(francesco)\n",
     "\n",
+    "elisa = {'name':'Elisa', 'age':27, 'gender':'F'}\n",
+    "show_user_info(elisa)\n",
+    "\n",
     "giovanni = {'name':'Giovanni', 'age':68, 'gender':'M'}\n",
     "show_user_info(giovanni, email='gio@mail.it')"
    ]
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -315,9 +316,9 @@
     "*Esercizio 1*\n",
     "---\n",
     "- costruire un database di utenti con campi a piacere\n",
-    "- scrivere una funzione che ordina gli utenti per età (dal più piccolo) e chiama show_contact_info per stamparne le info; per ordinare per età crescente, usare il costrutto:\n",
+    "- scrivere una funzione che ordina gli utenti per età (dal più piccolo) e chiama show_user_info per stamparne le info; per ordinare per età crescente, usare il costrutto:\n",
     "        sorted(users, key = lambda user : user['age'])\n",
-    "- testare il funzionamento con una chiamata"
+    "- testare il funzionamento con una chiamata."
    ]
   },
   {
@@ -553,7 +554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
