--- a/5. Funzioni.ipynb
+++ b/5. Funzioni.ipynb
@@ -315,8 +315,8 @@
    "source": [
     "*Esercizio 1*\n",
     "---\n",
-    "- costruire un database di utenti con campi a piacere\n",
-    "- scrivere una funzione che ordina gli utenti per età (dal più piccolo) e chiama show_user_info per stamparne le info; per ordinare per età crescente, usare il costrutto:\n",
+    "- costruire un database di utenti specificandone l'età e altri campi a piacere\n",
+    "- scrivere una funzione che ordina gli utenti per età (dal più piccolo) e chiama show_user_info per stamparne le info; per ordinare in ordine crescente di età, usare il costrutto:\n",
     "        sorted(users, key = lambda user : user['age'])\n",
     "- testare il funzionamento con una chiamata."
    ]
@@ -397,7 +397,6 @@
    "source": [
     "Le lambda sono funzioni a tutti gli effetti, con l'unica differenza di essere anonime. Si usano quando una funzione viene chiamata una sola volta o, più esattamente, in una sola riga del codice. Per saperne di più sulle funzioni lambda: \n",
     "\n",
-    "- http://www.secnetix.de/olli/Python/lambda_functions.hawk\n",
     "- https://stackoverflow.com/questions/890128/why-are-python-lambdas-useful\n",
     "- https://www.python-course.eu/python3_lambda.php"
    ]
@@ -451,22 +450,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Eseguo il prodotto di 10 e 5.\n",
+      "Eseguo e restituisco il prodotto di 10 e 5.\n",
       "50\n"
      ]
     }
    ],
    "source": [
     "def product(a, b):\n",
-    "    print('Eseguo il prodotto di {} e {}.'.format(a, b))\n",
-    "    return a*b\n",
+    "    print(f'Eseguo e restituisco il prodotto di {a} e {b}.')\n",
+    "    c = a*b\n",
+    "    return c\n",
     "\n",
     "print(product(10, 5))"
    ]
@@ -482,7 +482,7 @@
     "- aggiunge l'utente al database solo se è maggiorenne\n",
     "- restituisce il database aggiornato\n",
     "\n",
-    "Inserire utenti maggiorenni e minorenni e verificare con una stampa che il database contenga tutti e soli i maggiorenni inseriti."
+    "Testare il funzionamento con utenti maggiorenni e minorenni e verificare con una stampa che il database contenga tutti e soli i maggiorenni."
    ]
   },
   {
